[package]
name = "kodegen_mcp_tool"
version = "0.5.1"
edition = "2024"
description = "KODEGEN.ᴀɪ: Memory-efficient, Blazing-Fast, MCP tools for code generation agents."
license = "Apache-2.0 OR MIT"
authors = ["KODEGEN.ᴀɪ"]
homepage = "https://kodegen.ai"
repository = "https://github.com/cyrup-ai/kodegen-mcp-tool"
readme = "README.md"
categories = ["development-tools", "command-line-utilities", "api-bindings"]
keywords = [
    "mcp",
    "terminal",
    "agent",
    "filesystem",
    "claude"
]

[dependencies]
# MCP SDK - for RMCP integration
rmcp = { version = "0.9", features = [
    "client",
    "schemars",
    "server",
    "transport-child-process",
    "transport-io",
    "transport-sse-client",
    "transport-sse-client-reqwest",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest"
]}

# HTTP types (for extracting headers from request::Parts)
http = "1"

# Async runtime (for tool_history)
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Futures (for .boxed() in tool routes)
futures = "0.3"

# Logging (for schema validation)
log = "0.4"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation
schemars = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Synchronization primitives (for schema cache)
parking_lot = "0.12"

# Date/time (for tool_history)
chrono = { version = "0.4", features = ["serde"] }

# Terminal colors (for tool_history)
cyrup_termcolor = "2"

# Cross-platform paths (for tool_history)
dirs = "6"
kodegen_config = { version = "0.5" }

[lib]
name = "kodegen_mcp_tool"
path = "src/lib.rs"
